# task-runner-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20260124053314_users_table.sql
src/: lib.rs  main.rs
src/db/: mod.rs
src/db/models/: mod.rs  users.rs
src/handlers/: auth_handler.rs  mod.rs
src/routes/: auth_router.rs
src/schemas/: user_auth.rs
src/services/: auth_services.rs  mod.rs
src/state/: mod.rs
src/utils/: jwt.rs
