[package]
name = "task-runner-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
tracing = "0.1"
serde="1.0.228"
chrono="0.4.43"
argon2="0.5.3"
jsonwebtoken= { version = "10.2.0", features = ["rust_crypto"]}
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "macros"
]}
anyhow = "1"
dotenvy = "0.15.7"
